<resources>
    <string name="app_name">ToolPack</string>
    <string name="title_login">Please log in to you account</string>
    <string name="title_add_driver">Create an account for the driver</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="content_desc">Image</string>

    <string name="err_msg_enter_full_name">Please enter the fullname</string>
    <string name="err_msg_wrong_full_name">Please only use letters</string>

    <string name="err_msg_enter_username">Please enter email</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_short_password">Password has to be more than 6 characters</string>


    <string name="please_wait">Please Wait&#8230;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>


    <string name="change_password_text">Enter your e-mail address and we\'ll send you an e-mail ID to reset your password </string>
    <string name="title_activity_driver_update_details">DriverUpdateDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_driver_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_driver_main_view">MainActivity</string>


    <!--    common strings fro database action-->
    <string name="msg_addsuccessful">Record Added Successfully</string>
    <string name="msg_addfailure">Record Failed to add</string>

    <!--    add building sites Strings -->
    <string name="buildingSiteName">Name</string>
    <string name="buildingSiteAddress">Address</string>
    <string name="buildingSiteAdminEmail">Site Admin E-mail</string>
    <string name="buildingSiteAdminFullName">Site Admin FullName</string>
    <string name="buildingSitePhone">Site Telephone</string>
    <string name="button_addNewBuildingSite">Submit</string>

    <!--    add vendor Strings -->
    <string name="vendorName">FullName</string>
    <string name="vendoremail">E-mail</string>
    <string name="vendoraddress">Pickup Address</string>
    <string name="vedorphone">Contact Number</string>
    <string name="button_addNewVendor">Submit</string>

    <!--    add new package Strings-->
    <string-array name="package_status_array">
        <item>Pending</item>
    </string-array>
    <string name="textview">Select Vendor:</string>
    <string name="spinner_selectVendor">Select Vendor: </string>
    <string name="spinner_selectDriver">Select Driver: </string>
    <string name="spinner_selectPackageStatus">Select Package Status: </string>
    <string name="spinner_selectBuildingsite">Select Building Site: </string>
    <string name="packageDescripton">Package Description</string>

    <!--    package item list-->
    <string name="packageName">Name: %s</string>
    <string name="packageDriver">Driver: %s</string>
    <string name="packageVendor">Vendor: %s</string>
    <string name="packageDescription">Description: %s</string>
    <string name="packageWeight">Weight: %s kg</string>
    <string name="buildingSite">Delivery Address: %s</string>
    <string name="vendorAddress">Pickup Address: %s</string>
    <string name="deliveryDate">Delivery Date: %s</string>
    <string name="deliveryTime">Delivery Time: %s</string>
    <string name="status">Status: %s</string>

    <!--    driver item list-->
    <string name="driverName">Name: %s</string>
    <string name="driverEmail">E-mail: %s</string>
    <string name="driverMobile">Mobile: %s</string>
    <string name="driverProfileCompleted">Profile Completed: %s</string>

    <!--    vendor item list-->
    <string name="vendorNamee">Name: %s</string>
    <string name="vendorEmail">E-mail: %s</string>
    <string name="vendorMobile">Mobile: %s</string>

    <!--  building site item list  -->
    <string name="buildingName">Name: %s </string>
    <string name="buildingAddress">Address: %s </string>
    <string name="buildingPhone">Mobile: %s </string>
    <string name="siteAdminName">Site Admin Name: %s </string>
    <string name="siteAdminEmail">Site Admin E-mail: %s </string>


</resources>