<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.sidebar.ui.addBuildingSite.AddBuildingSiteFragment">

    <ScrollView
        android:id="@+id/add_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="412dp"
                android:layout_height="201dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/auth_header_image" />
            </FrameLayout>

            <EditText
                android:id="@+id/vendorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/vendorName"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/vendorEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frameLayout2" />

            <EditText
                android:id="@+id/vendorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="84dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/vendoremail"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/vendorAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vendorName" />

            <EditText
                android:id="@+id/vendorAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/vendoraddress"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/vedorPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vendorEmail"
                app:layout_constraintVertical_bias="0.16"
                android:autofillHints="Autofill" />

            <EditText
                android:id="@+id/vedorPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/vedorphone"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@+id/button_addNewVendor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vendorAddress"
                app:layout_constraintVertical_bias="0.16"
                android:autofillHints="autofill" />

            <Button
                android:id="@+id/button_addNewVendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/button_addNewVendor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vedorPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
